sort.basic.bubble.AlgBubbleSort2.scala.error
Compilation error:
AlgBubbleSort2:9: error: not found: value j
      if(isSmaller(j+1,j)){
                   ^AlgBubbleSort2:9: error: not found: value j
      if(isSmaller(j+1,j)){
                       ^AlgBubbleSort2:11: error: not found: value j
        swap(j,j+1);
             ^AlgBubbleSort2:11: error: not found: value j
        swap(j,j+1);
               ^